--- a/view/reception-main.html
+++ b/view/reception-main.html
@@ -280,7 +280,7 @@
                                             Sent
                                         </a>
                                     </li>
-                                    <li class="" id="w8nApprovalTab" style="visibility: hidden">
+                                    <li class="" id="w8nApprovalTab" aria-expanded="false">
                                         <a href="#view-all" data-toggle="tab" aria-expanded="false">
                                             <i class="material-icons">thumbs_up_down</i>
                                             w8n approval
