--- a/view/index.html
+++ b/view/index.html
@@ -123,7 +123,7 @@
 				</div>
 				<div class="container-fluid" id="showDiv" style="display: none">
 					<div id="buttonDiv" class="container" style=" margin: 0 auto; width: 100%;">
-						<button class="btn btn-danger pull-left animated fadeIn" data-toggle="modal" data-target="#newTypeModal" id="createNewButton" style="display: none"><i class="pe-7s-pen"></i></button>
+						<!--<button class="btn btn-danger pull-left animated fadeIn" data-toggle="modal" data-target="#newTypeModal" id="createNewButton" style="display: none"><i class="pe-7s-pen"></i></button>-->
 						<!--<button class="btn btn-default pull-left" data-toggle="tooltip" data-placement="bottom" title="" data-container="body" data-original-title="Refresh" onclick="location.href='index.html'"><i class="pe-7s-refresh-2"></i></button>-->
 						<button class="btn btn-default pull-left animated fadeIn" data-toggle="tooltip" data-placement="bottom" title="" data-container="body" data-original-title="Refresh" onclick="refresh()"><i class="pe-7s-refresh-2"></i></button>
                         <button class="btn btn-info pull-left animated fadeIn" data-toggle="tooltip" data-placement="bottom" title="" data-container="body" data-original-title="Search" onclick="searchView()"><i class="pe-7s-search"></i></button>
@@ -134,10 +134,10 @@
 
 
 					<!-- Carousel Card -->
-					<div class="container" id="caroselDiv" style="min-height: 500px; display:flex; align-items:center; justify-content:center; width: 80%" data-interval="false" >
-						<div class="card card-raised card-carousel animated fadeIn" style="background: #CCCCCC; border: 0px;" data-interval="false">
-							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false" style="border: 0px">
-								<div class="carousel slide" data-ride="carousel" data-interval="false" style="left:0; right:0;top:0; bottom:0;margin:auto;max-width:100%;max-height:100%;overflow:auto;">
+					<div class="container" id="caroselDiv" style="min-height: 500px; display:flex; align-items:center; justify-content:center; width: 80%"  >
+						<div class="card card-raised card-carousel animated fadeIn" style="background: #CCCCCC; border: 0px;" >
+							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel"  style="border: 0px">
+								<div class="carousel slide" data-ride="carousel" style="left:0; right:0;top:0; bottom:0;margin:auto;max-width:100%;max-height:100%;overflow:auto;">
 
 									<!-- Indicators -->
 									<ol class="carousel-indicators" id="carIndicator">
@@ -150,7 +150,7 @@
 
 
 									<!-- Wrapper for slides -->
-									<div class="carousel-inner" id="carNotice" data-interval="false" style="border: 0px ; min-height: 120px">
+									<div class="carousel-inner" id="carNotice" style="border: 0px ; min-height: 120px">
 										<div class="item active" >
 											<div id="quillEdit0" style="background-color: white">
 												<h1 align="center">No Advertisements to be displayed</h1>
@@ -289,48 +289,48 @@
 										</div>
 									</div>
 								</div>
-								<div class="tab-pane animated fadeIn" id="update">
-                                    <div class="card" id="noSent">
-                                        <h3 align="center">List of sent notices is empty</h3>
-                                    </div>
-									<div class="card" id="yesSent" style="display: none">
-										<div class="content table-responsive table-full-width">
-											<table id="sentTable" class="table table-hover table-striped">
-												<thead>
-												<tr><th onclick="sortSTable(0)" style="cursor: pointer">Title</th>
-													<th onclick="sortSTable(1)" style="cursor: pointer">Type</th>
-													<th onclick="sortSDateTable(2)" style="cursor: pointer">Date</th>
-													<th></th>
-													<th></th>
-													<th></th>
-												</tr></thead>
-												<tbody id="sentDetailTable" >
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
-								<div class="tab-pane animated fadeIn" id="view-all">
-                                    <div class="card" id="noAuth">
-                                        <h3 align="center">No Notices to Authorize</h3>
-                                    </div>
-									<div class="card" id="yesAuth" style="display: none">
-										<div class="content table-responsive table-full-width">
-											<table id="authTable" class="table table-hover table-striped">
-												<thead>
-												<tr><th onclick="sortATable(0)" style="cursor: pointer">Title</th>
-													<th onclick="sortATable(1)" style="cursor: pointer">Type</th>
-													<th onclick="sortADateTable(2)" style="cursor: pointer">Date</th>
-													<th></th>
-													<th></th>
-													<th></th>
-												</tr></thead>
-												<tbody id="authDetailTable" >
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
+								<!--<div class="tab-pane animated fadeIn" id="update">-->
+                                    <!--<div class="card" id="noSent">-->
+                                        <!--<h3 align="center">List of sent notices is empty</h3>-->
+                                    <!--</div>-->
+									<!--<div class="card" id="yesSent" style="display: none">-->
+										<!--<div class="content table-responsive table-full-width">-->
+											<!--<table id="sentTable" class="table table-hover table-striped">-->
+												<!--<thead>-->
+												<!--<tr><th onclick="sortSTable(0)" style="cursor: pointer">Title</th>-->
+													<!--<th onclick="sortSTable(1)" style="cursor: pointer">Type</th>-->
+													<!--<th onclick="sortSDateTable(2)" style="cursor: pointer">Date</th>-->
+													<!--<th></th>-->
+													<!--<th></th>-->
+													<!--<th></th>-->
+												<!--</tr></thead>-->
+												<!--<tbody id="sentDetailTable" >-->
+												<!--</tbody>-->
+											<!--</table>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+								<!--<div class="tab-pane animated fadeIn" id="view-all">-->
+                                    <!--<div class="card" id="noAuth">-->
+                                        <!--<h3 align="center">No Notices to Authorize</h3>-->
+                                    <!--</div>-->
+									<!--<div class="card" id="yesAuth" style="display: none">-->
+										<!--<div class="content table-responsive table-full-width">-->
+											<!--<table id="authTable" class="table table-hover table-striped">-->
+												<!--<thead>-->
+												<!--<tr><th onclick="sortATable(0)" style="cursor: pointer">Title</th>-->
+													<!--<th onclick="sortATable(1)" style="cursor: pointer">Type</th>-->
+													<!--<th onclick="sortADateTable(2)" style="cursor: pointer">Date</th>-->
+													<!--<th></th>-->
+													<!--<th></th>-->
+													<!--<th></th>-->
+												<!--</tr></thead>-->
+												<!--<tbody id="authDetailTable" >-->
+												<!--</tbody>-->
+											<!--</table>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
 							</div>
 						</div>
 					</div>
@@ -500,9 +500,7 @@
     refresh();
 
     function sortBoth() {
-        sortFSDateTable(2);
         sortFNDateTable(3);
-        sortFADateTable(2);
     }
 </script>
 
