--- a/view/lecturer-create-event.html
+++ b/view/lecturer-create-event.html
@@ -10,12 +10,19 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
 
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
 
     <!-- Bootstrap core CSS     -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
     <!-- Animation library for notifications   -->
+    <link href="css/crtRegular.css" rel="stylesheet"/>
     <link href="css/animate.min.css" rel="stylesheet"/>
+    <script src="css/animate.css"></script>
 
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
@@ -29,18 +36,12 @@
     <script src="quill/quill.js"></script>
     <script src="quill/quill.min.js"></script>
 
-    <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
 
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+
 
 
 </head>
@@ -319,23 +320,22 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/collapse.js" type="text/javascript"></script>
+<script src="js/transition.js" type="text/javascript"></script>
 
-<!--  Checkbox, Radio & Switch Plugins -->
-<script src="js/bootstrap-checkbox-radio-switch.js"></script>
 
-<!--  Charts Plugin -->
-<script src="js/chartist.min.js"></script>
-
-<!--  Notifications Plugin    -->
-<script src="js/bootstrap-notify.js"></script>
-
-<!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
-<script src="js/light-bootstrap-dashboard.js"></script>
+<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 
 <!--JS for the current page-->
-<script src="js/usr/lecturer-create-event.js" type="text/javascript"></script>
+<script src="js/create-advertisement.js" type="text/javascript"></script>
+
+<!--JS for material-->
+<script src="js/material-kit.js"></script>
+<script src="js/material.min.js"></script>
 
 <script type="text/javascript">
     window.onload=function(){
@@ -348,19 +348,19 @@
         sortSelecTable(1);
     }
 
-    $(document).ready(function () {
-
-
-        $.notify({
-            icon: 'pe-7s-gift',
-            message: "Welcome to <b>Smart Notice Board</b>"
-
-        }, {
-            type: 'info',
-            timer: 4000
-        });
-
-    });
+//    $(document).ready(function () {
+//
+//
+//        $.notify({
+//            icon: 'pe-7s-gift',
+//            message: "Welcome to <b>Smart Notice Board</b>"
+//
+//        }, {
+//            type: 'info',
+//            timer: 4000
+//        });
+//
+//    });
 </script>
 
 </html>
