Student | Module | Result | Statistics  Support

--- a/view/student-main.html
+++ b/view/student-main.html
@@ -115,7 +115,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="" id="logout">
                                 Log out
                             </a>
                         </li>
@@ -163,6 +163,7 @@
 
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
+<script src="js/usr/logout.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
