--- a/view/reception-student.html
+++ b/view/reception-student.html
@@ -256,9 +256,9 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Contact Number</label>
+                                                        <label>Email</label>
                                                         <input type="text" class="form-control" placeholder=""
-                                                               name="st-contact">
+                                                               name="st-email">
                                                     </div>
                                                 </div>
                                             </div>
@@ -328,9 +328,9 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <label>Contact Number</label>
+                                                    <label>Email</label>
                                                     <input type="text" class="form-control" placeholder=""
-                                                           name="sc-contact" readonly>
+                                                           name="sc-email" readonly>
                                                 </div>
                                             </div>
                                         </div>
