--- a/view/reception-user.html
+++ b/view/reception-user.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Lecturer</title>
+    <title>Reception</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -29,61 +29,26 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
 </head>
 <body>
 
 <div class="wrapper">
-    <div class="sidebar" data-color="blue" data-image="img/sidebar-5.jpg">
+    <div class="sidebar" data-color="purple" data-image="img/sidebar-5.jpg">
 
         <div class="sidebar-wrapper">
             <div class="logo">
-                <a href="lecturer-main.html" class="simple-text">
-                    Lecturer
+                <a href="#" class="simple-text">
+                    Reception
                 </a>
             </div>
 
             <ul class="nav">
                 <li class="active">
-                    <a href="/lecturer">
-                        <i class="pe-7s-home"></i>
-                        <p>Home</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-module">
-                        <i class="pe-7s-note2"></i>
-                        <p>Module</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-result">
-                        <i class="pe-7s-upload"></i>
-                        <p>Result</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-contact">
-                        <i class="pe-7s-phone"></i>
-                        <p>Contacts</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-statistics">
-                        <i class="pe-7s-graph"></i>
-                        <p>Statistics</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-timetable">
-                        <i class="pe-7s-timer"></i>
-                        <p>Timetable</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="lecturer-notification.html">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
+                    <a href="/manage-user">
+                        <i class="pe-7s-users"></i>
+                        <p>User Management</p>
                     </a>
                 </li>
             </ul>
@@ -133,7 +98,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" id="logout">
+                            <a href="#">
                                 Log out
                             </a>
                         </li>
@@ -145,7 +110,74 @@
 
         <div class="content">
             <div class="container-fluid">
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Manage User Account</h4>
+                    </div>
 
+                    <div class="content">
+                        <form id="create-user">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>User Type</label>
+                                        <select name="user-type" class="form-control">
+                                            <option value="HOD">HOD</option>
+                                            <option value="REC">Reception</option>
+                                            <option value="LEC">Lecturer</option>
+                                            <option value="REP">Representive</option>
+                                            <option value="STU">Student</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="lec-session">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Lecturer</label>
+                                            <select name="cn-lecturer" class="form-control"></select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="stu-session">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Student</label>
+                                            <select name="cn-student" class="form-control"></select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="other-session">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Email</label>
+                                            <input type="text" class="form-control" name="cn-email">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Password</label>
+                                        <input type="text" class="form-control" name="cn-password">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <button type="submit" class="btn btn-info btn-fill">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -164,7 +196,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
@@ -182,21 +214,8 @@
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
+<script src="/socket.io/socket.io.js"></script>
 
-//        	demo.initChartist();
-
-        $.notify({
-            icon: 'pe-7s-gift',
-            message: "Welcome to <b>Smart Notice Board</b>"
-
-        }, {
-            type: 'info',
-            timer: 4000
-        });
-
-    });
-</script>
+<script src="js/usr/manage-user.js"></script>
 
 </html>
