--- a/view/sign-in.html
+++ b/view/sign-in.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
                 <div class="card card-signup">
-                    <form class="form">
+                    <form class="form" id="sign-in">
                         <div class="header header-info text-center">
                             <a href="/"><i class="material-icons">reply</i></a>
                             <h4>Smart Notice Board</h4>
@@ -41,7 +41,7 @@
 											<i class="material-icons">email</i>
 										</span>
                                 <div class="form-group"><input type="text" class="form-control"
-                                                               placeholder="Email..."><span
+                                                               placeholder="Email..." name="email"><span
                                         class="material-input"></span></div>
                             </div>
 
@@ -50,16 +50,14 @@
 											<i class="material-icons">lock_outline</i>
 										</span>
                                 <div class="form-group"><input type="password" placeholder="Password..."
-                                                               class="form-control"><span class="material-input"></span>
+                                                               class="form-control" name="password"><span class="material-input"></span>
                                 </div>
                             </div>
 
                             <div class="footer text-right">
                                 <button type="submit" class="btn btn-info btn-md">Sign in</button>
                             </div>
-
                         </div>
-
                     </form>
                 </div>
             </div>
@@ -91,7 +89,7 @@
 
 </body>
 <!--   Core JS Files   -->
-<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/material.min.js"></script>
 
@@ -103,6 +101,22 @@
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="js/material-kit.js" type="text/javascript"></script>
+
+<script !src="">
+    $('#sign-in').on('submit', function (e) {
+        e.preventDefault();
+        var email = $('[name=email]').val();
+        var password = $('[name=password]').val();
+        console.log(email, password);
+        $.post("http://localhost:3000/login/"+ email + "/" + password, function (res) {
+            if (res.url) {
+                window.location.href = res.url;
+            }else{
+                alert('Authentication failed');
+            }
+        });
+    })
+</script>
 </html>
 
 
