Commit before major changes

--- a/view/index.html
+++ b/view/index.html
@@ -37,10 +37,10 @@
 <body class="index-page">
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    var numNot=0;
-    var loggedID="0000000";
-    sessionStorage.setItem('loggedID',loggedID);
-    sessionStorage.setItem('approverID',"0000000");
+//    var numNot=0;
+//    var loggedID="0000000";
+//    sessionStorage.setItem('loggedID',loggedID);
+//    sessionStorage.setItem('approverID',"0000000");
 </script>
 <!-- Navbar -->
 <nav class="navbar navbar-info navbar-transparent navbar-fixed-top navbar-color-on-scroll">
